--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,104 +1,104 @@
-name: main
+name: sonarcloud
 
 on:
   workflow_dispatch:
   pull_request:
     branches:
       - main
-
-permissions:
-  id-token: write
-  contents: read
-  checks: write
-
-concurrency: action
+  push:
+    branches:
+      - main
 
 defaults:
   run:
     shell: pwsh
 
 jobs:
-  plan:
-    name: Plan infrastructure
-    runs-on: ubuntu-latest-4-cores-static-ip
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: ardian-france/devops-terraform-plan-action@v2
-        with:
-          client-id: ${{ vars.TF_CLIENT_ID }}
-          subscription-id: ${{ vars.AZ_SUBSCRIPTION_ID }}
-          tenant-id: ${{ vars.AAD_TENANT_ID }}
-          terraform-modules-token: ${{ secrets.TF_MODULES_TOKEN }}
-          terraform-version: ${{ vars.TF_VERSION }}
-          working-directory: ${{ vars.TF_WORKING_DIRECTORY }}
-  apply:
-    name: Apply infrastructure
-    runs-on: ubuntu-latest-4-cores-static-ip
-    needs: plan
-    outputs:
-      acr-name: ${{ steps.acr-name.outputs.terraform }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: ardian-france/devops-terraform-apply-action@v2
-        with:
-          client-id: ${{ vars.TF_CLIENT_ID }}
-          subscription-id: ${{ vars.AZ_SUBSCRIPTION_ID }}
-          tenant-id: ${{ vars.AAD_TENANT_ID }}
-          terraform-modules-token: ${{ secrets.TF_MODULES_TOKEN }}
-          terraform-version: ${{ vars.TF_VERSION }}
-          working-directory: ${{ vars.TF_WORKING_DIRECTORY }}
-      - uses: ardian-france/devops-terraform-output-action@v1
-        id: acr-name
-        with:
-          key: acr_name
-          working-directory: ${{ vars.TF_WORKING_DIRECTORY }}
-  test-container:
-    name: Test for container
-    runs-on: ubuntu-latest
-    needs: apply
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Make CI operations for container
-        uses: ./
-        with:
-          client-id: ${{ vars.TF_CLIENT_ID }}
-          container-registry-name: ${{ needs.apply.outputs.acr-name }}
-          docker-image-name: ${{ vars.DOCKER_IMAGE_NAME }}
-          push-docker-image-pull-requests: true
-          subscription-id: ${{ vars.AZ_SUBSCRIPTION_ID }}
-          tenant-id: ${{ vars.AAD_TENANT_ID }}
-          working-directory: src
-          version: ${{ github.sha }}
-  test-code:
-    name: Test for code
+  build:
+    name: Build and analyze
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Make CI operations
-        uses: ./
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          containerized: false
-          working-directory: src
-          version: ${{ github.sha }}
-  clean:
-    name: Clean
-    runs-on: ubuntu-latest-4-cores-static-ip
-    needs:
-      - apply
-      - test-container
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: ardian-france/devops-terraform-destroy-action@v1
-        if: ${{ always() }}
+          java-version: 17
+          distribution: zulu
+      - uses: actions/checkout@v3
         with:
-          client-id: ${{ vars.TF_CLIENT_ID }}
-          subscription-id: ${{ vars.AZ_SUBSCRIPTION_ID }}
-          tenant-id: ${{ vars.AAD_TENANT_ID }}
-          terraform-modules-token: ${{ secrets.TF_MODULES_TOKEN }}
-          terraform-version: ${{ vars.TF_VERSION }}
-          working-directory: ${{ vars.TF_WORKING_DIRECTORY }}
+          fetch-depth: 0
+      # - name: Install Sonar scanner for .NET
+      #   run: |
+      #     cd /tmp || exit
+      #     mkdir sonar
+      #     wget -q https://github.com/SonarSource/sonar-scanner-msbuild/releases/download/6.0.0.81631/sonar-scanner-6.0.0.81631-net.zip
+      #     echo "Download completed."
+      #     echo "Unziping downloaded file..."
+      #     unzip sonar-scanner-6.0.0.81631-net.zip -d sonar
+      #     echo "Unzipping completed."
+      #     echo "============================"
+      #     echo "Listing files in /tmp/sonar..."
+      #     ls -ll /tmp/sonar
+      #     echo "============================"
+      #     rm sonar-scanner-6.0.0.81631-net.zip
+      #     sudo mv sonar/* /var/opt
+      #     echo "============================"
+      #     echo "Listing files in /var/opt..."
+      #     ls -ll /var/opt
+      #     echo "============================"
+      #     sudo chmod +x /var/opt/sonar-scanner-5.0.1.3006/bin/sonar-scanner
+      #     echo "Creating links..."
+      #     sudo ln -s /var/opt/sonar-scanner-5.0.1.3006/bin/sonar-scanner /usr/local/bin/
+
+      #     ls -ll /usr/local/bin
+
+      #     echo "Path to sonar-scanner:"
+      #     which sonar-scanner
+      - name: Install Sonar scanner
+        run: |
+          cd /tmp || exit
+          wget -q https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          echo "Download completed."
+          echo "Unziping downloaded file..."
+          unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+          echo "Unzipping completed."
+          rm sonar-scanner-cli-5.0.1.3006-linux.zip
+          sudo mv sonar-scanner-5.0.1.3006-linux /var/opt
+          echo "Creating links..."
+          sudo ln -s /var/opt/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner /usr/local/bin/
+
+          echo "Path to sonar-scanner:"
+          which sonar-scanner
+
+      # - name: Install code coverage tool
+      #   run: |
+      #     dotnet tool install --global dotnet-coverage
+      #     mkdir __reports
+      # - name: Build and analyze for .NET
+      #   run: |
+      #     dotnet /var/opt/SonarScanner.MSBuild.dll begin /k:"mike74vh_sonarcloud" /o:"mike74vh" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /s:"${{ github.workspace }}/SonarQube.Analysis.xml" /d:sonar.cs.vscoveragexml.reportsPaths=${{ github.workspace }}/__reports/coverage.xml
+      #     dotnet build -c Release --no-incremental
+      #     dotnet-coverage collect "dotnet test" -f xml -o "${{ github.workspace }}/__reports/coverage.xml"
+      #     dotnet /var/opt/SonarScanner.MSBuild.dll end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+      #   working-directory: src
+
+      # dotnet test -c Release --results-directory __reports --logger:"junit;LogFileName={assembly}.unittests.junit.xml" --verbosity normal --collect:"XPlat Code Coverage;Format=cobertura"
+
+      - name: Build and analyze
+        run: |
+          sonar-scanner --define sonar.host.url="https://sonarcloud.io" --define sonar.token="${{ secrets.SONAR_TOKEN }}"
+
+# - name: Install SonarCloud scanner
+#   run: dotnet tool install --global dotnet-sonarscanner --version 6.0.0
+# - name: Build and analyze
+#   env:
+#     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#   run: |
+#     dotnet sonarscanner begin /k:"mike74vh_sonarcloud" /o:"mike74vh" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io" /d:project.settings="${{ github.workspace }}/src/sonar-project.properties"
+#     dotnet build -c Release
+#     dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+
+#     echo ">>>>>>>>>>>>>>>>>>>>>>>"
+#     cat ${{ github.workspace }}/src/.sonarqube/out/sonar-project.properties
+#     echo ">>>>>>>>>>>>>>>>>>>>>>>"
+#   working-directory: src
