--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,8 @@ sonar.projectKey=mike74vh_python-sonarcloud
 sonar.organization=mike74vh
 sonar.language=py
 sonar.inclusions=**/*.py
+sonar.python.version=3.9
+sonar.python.coverage.reportPaths=__reports/coverage.cobertura.xml
 sonar.exclusions=**/tests/**,**/migrations/**,**/mocks/**
 sonar.sources=src
 sonar.sourceEncoding=UTF-8
